# CMBSCAT

./: README.md  pyproject.toml  setup.cfg
CMBSCAT/: CMBSCAT_class.py  __init__.py  cmbscat_class.py
CMBSCAT/CMBSCAT/: __init__.py
notebook/: CMBSCAT_demo.ipynb
notebook/data/: FOSCAT_V4_0_W9_4_2_PIDX2.npy  FOSCAT_V4_0_W9_4_2_SMOO.npy  FOSCAT_V4_0_W9_4_2_WAVE.npy  FOSCAT_V4_0_W9_4_32_SMOO.npy  FOSCAT_V4_0_W9_4_4_PIDX2.npy  FOSCAT_V4_0_W9_4_4_SMOO.npy  FOSCAT_V4_0_W9_4_8_PIDX2.npy  FOSCAT_V4_0_W9_4_8_SMOO.npy  FOSCAT_V4_0_W9_4_8_WAVE.npy  HEALPIXML_V4_0_W9_4_16_PIDX.npy  HEALPIXML_V4_0_W9_4_16_PIDX2.npy  HEALPIXML_V4_0_W9_4_16_SMOO.npy  HEALPIXML_V4_0_W9_4_16_WAVE.npy  HEALPIXML_V4_0_W9_4_2_PIDX.npy  HEALPIXML_V4_0_W9_4_32_PIDX2.npy  HEALPIXML_V4_0_W9_4_4_PIDX.npy  HEALPIXML_V4_0_W9_4_4_WAVE.npy  HEALPIXML_V4_0_W9_4_8_PIDX.npy  in_example_001_map_8.npy  in_example_007_map_16.npy  mm_example_004_map_8.npy  mm_example_005_map_16.npy  out_example_000_map_16.npy  out_example_000_map_8.npy  out_example_001_map_16.npy  out_example_001_map_8.npy  out_example_002_map_16.npy  out_example_002_map_8.npy  out_example_003_map_16.npy  out_example_003_map_8.npy  out_example_004_map_16.npy  out_example_004_map_8.npy  out_example_005_map_16.npy  out_example_005_map_8.npy  out_example_006_map_16.npy  out_example_006_map_8.npy  out_example_007_map_16.npy  out_example_007_map_8.npy  out_example_008_map_16.npy  out_example_008_map_8.npy  (+4 more)
src/cmbscat/: cmbscat_class.py
src/cmbscat.egg-info/: PKG-INFO
